GH#1648: Significant performance decline with @Reference(idOnly = true) migrating from 1.4.1
Generate proxy class for given reference type only once instead for each
instance of that reference type.
Proxy classes are cached by Byte Buddy's type cache and hold the
respective invocation handler as instance field value.